set java.ext.dirs to none to avoid any system java/extensions